# macro

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/backend/: __init__.py  app.py  config.py  db.py  models.py  schemas.py
backend/backend/etl/: __init__.py  bis_gli.py  boe.py  boj.py  ecb.py  fred.py  snb.py  util.py
backend/backend/indices/: __init__.py  composite.py  compute_g4.py  compute_gli_credit.py  standardize.py
backend/backend/routers/: __init__.py  config.py  health.py  indices.py  series.py  vintages.py
backend/backend/tasks/: __init__.py  build_indices.py  scheduler.py
backend/backend/tests/: test_pipeline_smoke.py  test_resample_fx.py  test_scheduler.py  test_zscore.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/chart/: page.tsx
frontend/app/methodology/: page.tsx
frontend/app/vintages/: page.tsx
frontend/components/: ChartView.tsx  ControlsPanel.tsx  IndexCard.tsx  TimeSeriesChart.tsx
frontend/lib/: api.ts
