[tool.poetry]
name = "gli-backend"
version = "0.1.0"
description = "Backend services for Global Liquidity Indices"
authors = ["Macro Team <team@example.com>"]
packages = [
  { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }
sqlalchemy = "^2.0.27"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
pydantic = "^2.6.4"
pydantic-settings = "^2.2.1"
httpx = "^0.27.0"
tenacity = "^8.2.3"
pandas = "^2.2.1"
numpy = "^1.26.4"
celery = "^5.3.6"
redis = "^5.0.1"
python-dateutil = "^2.8.2"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
pytest-asyncio = "^0.23.5"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
